# Source2Gen

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
GeneratedExample/: !GlobalTypes_classes.hpp  !GlobalTypes_enums.hpp  SchemaBase.hpp  client.dll_classes.hpp  server.dll_classes.hpp  worldrenderer.dll_classes.hpp
GeneratedExample_x64/: !GlobalTypes_classes.hpp  !GlobalTypes_enums.hpp  client.dll_classes.hpp  server.dll_classes.hpp  worldrenderer.dll_classes.hpp
Source2Dumper/: ClientClass.hpp  DllMain.cpp  FwUtils.cpp  FwUtils.hpp  PEHeader.cpp  PEHeader.hpp  Pattern.cpp  Pattern.hpp  Schema.cpp  Schema.hpp  SchemaClassGenerator.cpp  SchemaEnumGenerator.cpp  SchemaEnumGenerator.hpp  SchemaList.hpp  SchemaString.hpp  UnknownType.hpp  Utility.cpp  Utility.hpp
Source2Gen/: Address.cpp  Address.hpp  DllMain.cpp  Interface.hpp  SchemaClassGenerator.cpp  SchemaClassGenerator.hpp  SchemaEnumGenerator.cpp  SchemaEnumGenerator.hpp  SchemaEnumerators.hpp  SchemaList.cpp  SchemaUtil.cpp  SchemaUtil.hpp  Source2Gen.cpp  Source2Gen.hpp  Source2GenUtility.cpp  Source2GenUtility.hpp
Source2Gen/shared/: Address.cpp  Address.hpp  Interface.hpp  Schema.cpp  Schema.hpp  SchemaList.hpp  SchemaSystem.cpp  SchemaSystem.hpp  SchemaUtil.cpp  SchemaUtil.hpp  UnknownType.hpp  Utility.hpp
